--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-image: url("https://img.freepik.com/premium-vector/hand-lettering-motivational-phrase-let-s-go-ink-painted-modern-calligraphy-hand-typography-white_83277-5227.jpg?w=740");
+  animation: tool 4s ease-in-out infinite;
 }
 
 .start:hover {
@@ -126,6 +127,35 @@ body {
   .start:hover {
     width: 300px;
     height: 170px;
+  }
+  @keyframes tool {
+    from {
+      background-image: url("https://img.freepik.com/premium-vector/hand-lettering-motivational-phrase-let-s-go-ink-painted-modern-calligraphy-hand-typography-white_83277-5227.jpg?w=740");
+      background-size: 100% 100%;
+    }
+    20% {
+      background-image: url("https://img.freepik.com/premium-vector/hand-lettering-motivational-phrase-let-s-go-ink-painted-modern-calligraphy-hand-typography-white_83277-5227.jpg?w=740");
+      background-size: 100% 100%;
+    }
+    50% {
+      background-color: rgb(185, 213, 237);
+      background-image: url("https://revistabyte.es/wp-content/uploads/2022/07/que-es-un-desarrollador-de-go-y-como-convertirse-en-uno-696x416.jpg.webp");
+      background-size: 60% 100%;
+    }
+    60% {
+      background-color: rgb(185, 213, 237);
+      background-image: url("https://revistabyte.es/wp-content/uploads/2022/07/que-es-un-desarrollador-de-go-y-como-convertirse-en-uno-696x416.jpg.webp");
+      background-size: 60% 100%;
+    }
+    95% {
+      background-color: rgb(185, 213, 237);
+      background-image: url("https://revistabyte.es/wp-content/uploads/2022/07/que-es-un-desarrollador-de-go-y-como-convertirse-en-uno-696x416.jpg.webp");
+      background-size: 97% 100%;
+    }
+    100% {
+      background-image: url("https://img.freepik.com/premium-vector/hand-lettering-motivational-phrase-let-s-go-ink-painted-modern-calligraphy-hand-typography-white_83277-5227.jpg?w=740");
+      background-size: 100% 100%;
+    }
   }
 
   .message h2 {
